<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.vero.sibs.ui.registration.RegistrationViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_buy"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_edit_text_background"
            android:layout_marginTop="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:hint="@string/name"
            android:text="@={viewModel.name}"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_edit_text_background"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:hint="@string/phone_number"
            android:text="@={viewModel.phoneNumber}"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@drawable/default_material_button_background"
            android:enabled="@{viewModel.valid}"
            android:onClick="@{() -> viewModel.signUpUser()}"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>